test-crates/duchess-java-tests/tests/rust-to-java/must_use_jvmop.stderr
error: unused implementer of `JvmOp` that must be used
 --> tests/ui/must_use_jvmop.rs:6:5
  |
6 |     timestamp.set_time(0i64);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: JvmOps do nothing unless you call `.execute()
note: the lint level is defined here
 --> tests/ui/must_use_jvmop.rs:3:8
  |
3 | #[deny(unused_must_use)]
  |        ^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

